# sedsprintf_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.py  library.h  sedsprintf.h
Cpp-Headers/: config.hpp  discovery.hpp  generated_schema.hpp  internal.hpp  lock.hpp  queue.hpp  router.hpp  serialize.hpp  timesync.hpp
docs/: discovery_timesync.md  overview.md  packet.md  relay.md  router.md
header_templates/: sedsprintf.h.txt
scripts/: generate_schema.py
src/: c_api.hpp  core.cpp  discovery.cpp  discovery.hpp  discovery_helpers.hpp  generated_schema.hpp  internal.hpp  lib.hpp  macros.hpp  packet.cpp  packet.hpp  packet_api.cpp  queue.cpp  relay.cpp  relay.hpp  relay_api.cpp  router.cpp  router.hpp  router_api.cpp  router_core.cpp  serialize.cpp  small_payload.hpp  timesync.cpp
tests/: c_interop_test.c  c_system_test.c  check_codegen.py  rust_interop.py  rust_interop_cpp_peer.cpp  test_cpp_wrappers.cpp  test_link_local_overlay.cpp  tests.cpp
tests/schemas/: codegen_override_schema.json  ipc_link_local_overlay.json
